[gd_scene load_steps=10 format=2]

[ext_resource path="res://Resources/new_theme.tres" type="Theme" id=1]
[ext_resource path="res://Scripts/restartMenu.gd" type="Script" id=2]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/home.png" type="Texture" id=3]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/return.png" type="Texture" id=4]
[ext_resource path="res://Resources/Images/gameicons/PNG/White/1x/exitLeft.png" type="Texture" id=5]

[sub_resource type="CanvasItemMaterial" id=1]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=2]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=4]
light_mode = 1

[node name="restartMenu" type="Node"]
script = ExtResource( 2 )

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -150.0
margin_right = 150.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 20
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart" type="Button" parent="VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 1 )
margin_top = 145.0
margin_right = 300.0
margin_bottom = 223.0
theme = ExtResource( 1 )
text = "Restart"
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 2 )
margin_top = 243.0
margin_right = 300.0
margin_bottom = 321.0
theme = ExtResource( 1 )
text = "Main Menu"
icon = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitGame" type="Button" parent="VBoxContainer2"]
modulate = Color( 1.5, 1.5, 1.5, 1 )
material = SubResource( 3 )
margin_top = 341.0
margin_right = 300.0
margin_bottom = 419.0
theme = ExtResource( 1 )
text = "Exit Game"
icon = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer2"]
modulate = Color( 10, 10, 10, 1 )
material = SubResource( 4 )
margin_top = 439.0
margin_right = 300.0
margin_bottom = 495.0
theme = ExtResource( 1 )
align = 1

[connection signal="pressed" from="VBoxContainer2/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer2/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer2/ExitGame" to="." method="_on_ExitGame_pressed"]
